# ErisEngine

./: .gitattributes  .gitignore  CODING_CONVENTIONS.md  README.md
ErisEngine/: CMakeLists.txt  ErisEngine.vcxproj  ErisEngine.vcxproj.filters
ErisEngine/assets/ibl/: irradiance_negx.hdr  irradiance_negy.hdr  irradiance_negz.hdr  irradiance_posx.hdr  irradiance_posy.hdr  irradiance_posz.hdr  prefiltered_negx_0_256x256.hdr  prefiltered_negx_1_128x128.hdr  prefiltered_negx_2_64x64.hdr  prefiltered_negx_3_32x32.hdr  prefiltered_negx_4_16x16.hdr  prefiltered_negx_5_8x8.hdr  prefiltered_negx_6_4x4.hdr  prefiltered_negx_7_2x2.hdr  prefiltered_negy_0_256x256.hdr  prefiltered_negy_1_128x128.hdr  prefiltered_negy_2_64x64.hdr  prefiltered_negy_3_32x32.hdr  prefiltered_negy_4_16x16.hdr  prefiltered_negy_5_8x8.hdr  prefiltered_negy_6_4x4.hdr  prefiltered_negy_7_2x2.hdr  prefiltered_negz_0_256x256.hdr  (+32 more)
ErisEngine/include/: Camera.h  DeletionQueue.h  ErisEditor.h  ErisEngine.h  ErisPhysics.h  ErisWorld.h  LayoutTransition.h  Mesh.h  RenderObject.h  VulkanPipelineBuilder.h  VulkanType.h
ErisEngine/shaders/: compile.bat  frag.spv  grid.frag  grid.vert  grid_frag.spv  grid_vert.spv  gtao.comp  gtao.spv  hbao_clear.comp  hbao_clear.spv  shadow.vert  shadow_vert.spv  sky_frag.spv  sky_vert.spv  skybox.frag  skybox.vert  triangle.frag  triangle.vert  vert.spv
ErisEngine/src/: DeletionQueue.cpp  ErisEditor.cpp  ErisEngine.cpp  ErisPhysics.cpp  ErisWorld.cpp  RenderObject.cpp  VulkanPipelineBuilder.cpp  VulkanType.cpp  main.cpp
ErisEngine/tools/: gen_brdf_lut.py
shaders/: gtao.comp
(+25 files in other folders)
